project1/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: buginets/node-js-api
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001

      #az aks get-credentials --resource-group aks-rg --name myakscluster      run this command after terraform apply and infrastructure is created.
      # or  run before kubectl apply. This command will cerate kubeconfig file
