project1/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:


      containers:
        - name: nodejs
          image: buginets/node-js-api
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10     # wait 10s after container starts
            periodSeconds: 5            # check every 5s
            failureThreshold: 3         # 3 failed checks = not ready
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 30     # wait 30s before first check
            periodSeconds: 10           # check every 10s
            failureThreshold: 3  
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"                           
---


apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 3001
  # type: NodePort
